# dice-sample-dist

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
assignment/: assignment.ipynb  assignment.py  test_assignment.py
